--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Social Relationships & Communication</h1>
+        <h1 class="title">30 Useful Relationship Idioms</h1>
         
         <div class="nav-menu">
             <a href="flashcards.html" class="nav-item">Flashcards</a>
