--- a/speaking-cards.html
+++ b/speaking-cards.html
@@ -228,7 +228,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Social Relationships & Communication</h1>
+        <h1>30 Useful Relationship Idioms</h1>
         
         <div class="controls">
             <button class="btn" onclick="flipAllCards()">Flip All Cards</button>
