--- a/speaking-cards.html
+++ b/speaking-cards.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>30 Useful Relationship Idioms</title>
+    <title>Speaking Cards</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
@@ -228,7 +228,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>30 Useful Relationship Idioms</h1>
+        <h1>Speaking Cards</h1>
         
         <div class="controls">
             <button class="btn" onclick="flipAllCards()">Flip All Cards</button>
